ClassName and CSS files added

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,4 +1,8 @@
 // Colors
+$off-black: #404041;
+$light-blue: #82CECE;
+$blue: #448BC7;
+$off-white: #edeeee;
 // Spacing
 $s-size: 1.2rem;
 $m-size: 1.6rem;
