--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -3,8 +3,10 @@ html {
 }
 
 body {
+  background: $blue;
   font-family: Helvetica, Arial, sans-serif;
   font-size: $m-size;
+  margin-bottom: 10rem;
 }
 
 button {
@@ -16,5 +18,5 @@ button:disabled {
 }
 
 .is-active {
-  font-weight: bold;
+  font-weight: bold !important;
 }
