--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,2 +1,10 @@
 @import './base/settings';
 @import './base/base';
+@import './components/container';
+@import './components/header';
+@import './components/button';
+@import './components/input-group';
+@import './components/inputs';
+@import './components/form';
+@import './components/list';
+
