:art: refactoring to meet the google html/css style guidelines

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,7 +1,7 @@
 // Colors
+$blue: #448bc7;
+$light-blue: #82cece;
 $off-black: #404041;
-$light-blue: #82CECE;
-$blue: #448BC7;
 $off-white: #edeeee;
 // Spacing
 $s-size: 1.2rem;
