--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -4,8 +4,7 @@ html {
 
 body {
   background: $blue;
-  font-family: Helvetica, Arial, sans-serif;
-  font-size: $m-size;
+  font: $m-size Helvetica, Arial, sans-serif;
   margin-bottom: 10rem;
 }
 
