--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -1,17 +1,14 @@
-// Button
 .button {
-  background: none;
   border: none;
+  background: none;
   color: $off-white;
   display: flex;
+  font: 300 $l-size/1;
   text-align: center;
-  font-size: $l-size;
-  font-weight: 300;
-  line-height: 1;
   text-decoration: none;
   @media (max-width: $desktop-breakpoint) {
-    margin-top: $s-size;
     display: inline-block;
+    margin-top: $s-size;
   }
 }
 
@@ -20,7 +17,6 @@
     color: $light-blue
   }
 }
-
 
 .button--secondary {
   &:hover {
