--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,7 +1,3 @@
-html {
-  font-size: 62.5%;
-}
-
 body {
   background: $blue;
   font: $m-size Helvetica, Arial, sans-serif;
@@ -18,4 +14,11 @@ button:disabled {
 
 .is-active {
   font-weight: bold !important;
+}
+
+// Tachyons: center mw8 ph2
+.container {
+  margin: 0 auto;
+  max-width: 60rem;
+  padding: 0 $m-size;
 }
