--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -1,23 +1,26 @@
+// Tachyons: bg-transparent b--none near-white flex fw3 f2 lh-solid tc no-underline center mv2-m mh0-m
 .button {
-  border: none;
   background: none;
+  border: none;
   color: $off-white;
   display: flex;
   font: 300 $l-size/1;
   text-align: center;
   text-decoration: none;
-  @media (max-width: $desktop-breakpoint) {
-    display: inline-block;
-    margin-top: $s-size;
+  margin: $s-size auto;
+  @media (min-width: $desktop-breakpoint) {
+    margin: $s-size 0;
   }
 }
 
+// Tachyons: light-blue:hover
 .button--action {
   &:hover {
     color: $light-blue
   }
 }
 
+// Tachyons: red:hover
 .button--secondary {
   &:hover {
     color:  rgb(206, 44, 44);
