--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -1,8 +1,10 @@
+// Tachyons: flex flex-column
 .form {
   display: flex;
   flex-direction: column;
 }
 
+// Tachyons: flex flex-column mb0 tc flex-row-m mb-3-m tl-m
 .form__pairs{
   display: flex;
   flex-direction: column;
@@ -15,17 +17,17 @@
   }
 }
 
+// Tachyons: mt0 mr2 mb3 ml0 
 .form__pairs .text-input{
   margin: 0  $s-size $m-size 0;
-  @media (min-width: $desktop-breakpoint) {
-    margin: 0  $s-size $m-size 0;
-  }
 }
 
+// Tachyons: mt0 mr0 mb3 ml0 
 .form__pairs .rdatez .text-input{
-  margin-right: 0;
+  margin: 0  0 $m-size 0;
 }
 
+// Tachyons: i mt0 mr0 mb3 ml0 
 .form__error {
   font-style: italic;
   margin: 0 0 $m-size 0;
